--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,13 +12,18 @@
     </div>
 </div>
 
-
-<%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+<div role="form">
+<%= form_for(@message)  do |f| %>
+  <div class="form-group">名前:</div>
+  <%= f.text_field :name, :class => "form-control"%>
+  <br>
+  
+  <div class="form-group">内容:</div>
+  <%= f.text_area :body, :class => "form-control" %>
+  <br>
+  
+  <%= f.submit class: "btn btn-sm btn-primary"  %>
+  
 
 <% end %>
+</div>
