--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -13,6 +13,19 @@
 </div>
 
 <%= form_for @message, :html => { :class =>"form" }  do |f| %>
+  <% if @message.errors.present? %>
+      <div class="alert alert-danger">
+  <%= alert %>
+       <ul>
+<% @message.errors.full_messages.each do |full_message| %>
+          <li>
+<%= full_message %>
+          </li>
+<% end %>
+      </ul>
+    </div> 
+<% end %>
+    
   <div class="form-group">
     <%= f.label :name, "名前" %>
     <%= f.text_field :name, :class => "form-control"%>
@@ -24,9 +37,6 @@
     <%= f.text_area :body, :class => "form-control" %>
   </div>
   <br>
-  
   <%= f.submit class: "btn btn-sm btn-primary"  %>
   
-
 <% end %>
-</div>
