--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -8,8 +8,8 @@
             <span class="label label-info">
             <%= message.name %>
             </span>
+            （<%= message.age %>歳）
             <%= message.body %>
-            <%= message.age %>
             
             (
             <%= link_to "edit" , edit_message_path(message) %>
